--- a/.github/workflows/alb-controller.yaml
+++ b/.github/workflows/alb-controller.yaml
@@ -40,7 +40,7 @@ jobs:
         kubectl version --short --client
     - name: Update Kubeconfig
       run: |
-        aws eks update-kubeconfig --region us-east-1 --name EN 
+        aws eks update-kubeconfig --region us-east-1 --name EN-cluster
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY }}
