--- a/.github/workflows/alb-controller.yaml
+++ b/.github/workflows/alb-controller.yaml
@@ -11,6 +11,8 @@ jobs:
     name: 'CreateInfrastructure'
     runs-on: ubuntu-latest
     environment: production
+    env:
+      working-directory: ./alb-controller
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
