--- a/.github/workflows/alb-controller.yaml
+++ b/.github/workflows/alb-controller.yaml
@@ -63,8 +63,8 @@ jobs:
     - name: Debug
       run: |
         aws sts get-caller-identity
-  debug:
-    name: 'Debug'
+  assumeDeployRole:
+    name: 'AssumeDeployRole'
     runs-on: ubuntu-latest
     needs: assume_bootstrap
     environment: production  
@@ -72,6 +72,29 @@ jobs:
       run:
         shell: bash
     steps:
+    - name: AssumeBootstrap
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+          role-to-assume: arn:aws:iam::458459211465:role/Bootstrap_role
+          aws-region: us-east-1
+          role-session-name: ${{env.GITHUB_SHA}}
+          role-skip-session-tagging: true
+          role-duration-seconds: 1200
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Debug
+      run: |
+        aws sts get-caller-identity
+    - name: AssumeBootstrap
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+          role-to-assume: arn:aws:iam::458459211465:role/deploy_role
+          aws-region: us-east-1
+          role-session-name: ${{env.GITHUB_SHA}}
+          role-skip-session-tagging: true
+          role-duration-seconds: 1200
     - name: Debug
       run: |
         aws sts get-caller-identity
